--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,8 +12,13 @@
        <button>먹은 음식 입력</button>
     </form>
     <br>
-    <form method="POST" action='/diary'>
+    <form method="GET" action='/diary'>
        <button>다이어리</button>
     </form>
+      <br>
+    <form method="POST" action='/weight'>
+       <button>체중 기록</button>
+    </form>
+
   </body>
 </html>
