--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -2,19 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title></title>
   </head>
   <body>
-    <h1>WELCOME!</h1>
-
-    <p class="joined">회원이신가요?</p>
+    <div class="form">
     <form method="GET" action='/login'>
-       <button>로그인</button>
+      <h1>WELCOME!</h1>
+      <p class="joined">회원이신가요?</p>
+       <input type="submit" name="submit" value="Login">
     </form>
-    <br>
-    <p class="lead">아직 회원이 아니신가요?</p>
-    <form method="GET" action='/register'>
-       <button>회원가입</button>
+    <form method="GET" action='/register' >
+      <p class="lead">아직 회원이 아니신가요?</p>
+       <input type="submit" name="submit" value="Sign Up">
     </form>
+  </div>
   </body>
 </html>
